--- a/project2/project2/Base.lproj/Main.storyboard
+++ b/project2/project2/Base.lproj/Main.storyboard
@@ -186,14 +186,13 @@
                     <navigationItem key="navigationItem" title="Cart" id="dUP-RA-Y6q"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="ADD" destination="kmc-rt-ry1" id="szG-Ac-uaq"/>
                         <outlet property="Add" destination="kmc-rt-ry1" id="7Ib-3U-bpg"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="abQ-B0-EAw" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
                 <exit id="N2N-dv-QBI" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-800.00000000000011" y="1293.75"/>
+            <point key="canvasLocation" x="-800" y="1388"/>
         </scene>
         <!--the account-->
         <scene sceneID="dzh-A4-YP0">
@@ -298,55 +297,63 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="150" id="GmE-CX-pAs" customClass="Cell" customModule="project2" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="44.5" width="414" height="150"/>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" rowHeight="88" id="jqZ-XM-ay5" customClass="Cell" customModule="project2" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="88"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GmE-CX-pAs" id="Pwt-80-bzS" customClass="UITableViewCell">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="150"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jqZ-XM-ay5" id="45F-ez-hBh">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="88"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="1Mq-zt-g9o">
-                                            <rect key="frame" x="30" y="35" width="70" height="80"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RMl-Ry-C7b">
+                                            <rect key="frame" x="20" y="11" width="70" height="70"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="70" id="To9-Gg-2Dc"/>
+                                                <constraint firstAttribute="width" constant="70" id="qgu-f5-0Oq"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="skr-6w-mNv">
-                                            <rect key="frame" x="121" y="35" width="42.5" height="20.5"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="coT-a7-HPM">
-                                            <rect key="frame" x="353.5" y="64" width="48.5" height="31"/>
+                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="IxX-hA-Rc8">
+                                            <rect key="frame" x="98" y="23" width="42.5" height="41"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KIO-xD-RSo">
+                                                    <rect key="frame" x="0.0" y="0.0" width="42.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bju-Zy-Vc8">
+                                                    <rect key="frame" x="0.0" y="20.5" width="42.5" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </stackView>
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h6x-h2-NX2">
+                                            <rect key="frame" x="329" y="29" width="65" height="31"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="65" id="w3c-L6-uxF"/>
+                                            </constraints>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" title="add"/>
                                             <connections>
-                                                <action selector="btnAdd:" destination="GmE-CX-pAs" eventType="touchUpInside" id="mwj-bJ-9z1"/>
+                                                <action selector="btnAdd:" destination="jqZ-XM-ay5" eventType="touchUpInside" id="buo-AA-AWG"/>
                                             </connections>
                                         </button>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="price" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLD-cm-VhE">
-                                            <rect key="frame" x="126" y="84" width="183" height="21"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstAttribute="bottomMargin" secondItem="1Mq-zt-g9o" secondAttribute="bottom" constant="24" id="HF3-zI-nfF"/>
-                                        <constraint firstItem="1Mq-zt-g9o" firstAttribute="top" secondItem="Pwt-80-bzS" secondAttribute="topMargin" constant="24" id="VM7-LP-6Xv"/>
-                                        <constraint firstItem="skr-6w-mNv" firstAttribute="top" secondItem="Pwt-80-bzS" secondAttribute="topMargin" constant="24" id="agg-PN-RdU"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="GLD-cm-VhE" secondAttribute="trailing" constant="85" id="dDa-lt-fCU"/>
-                                        <constraint firstItem="GLD-cm-VhE" firstAttribute="leading" secondItem="1Mq-zt-g9o" secondAttribute="trailing" constant="26" id="dJ1-JH-4pQ"/>
-                                        <constraint firstItem="GLD-cm-VhE" firstAttribute="top" secondItem="skr-6w-mNv" secondAttribute="bottom" constant="28.5" id="df0-L3-MjV"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="1Mq-zt-g9o" secondAttribute="trailing" constant="294" id="iOA-pD-Tbi"/>
-                                        <constraint firstItem="coT-a7-HPM" firstAttribute="top" secondItem="Pwt-80-bzS" secondAttribute="top" constant="64" id="lie-5R-BK4"/>
-                                        <constraint firstItem="skr-6w-mNv" firstAttribute="leading" secondItem="1Mq-zt-g9o" secondAttribute="trailing" constant="21" id="ojD-Lv-LPD"/>
-                                        <constraint firstItem="1Mq-zt-g9o" firstAttribute="leading" secondItem="Pwt-80-bzS" secondAttribute="leadingMargin" constant="10" id="xkz-cD-7hP"/>
-                                        <constraint firstAttribute="trailing" secondItem="coT-a7-HPM" secondAttribute="trailing" constant="12" id="zDT-jg-Z0t"/>
+                                        <constraint firstItem="h6x-h2-NX2" firstAttribute="trailing" secondItem="45F-ez-hBh" secondAttribute="trailingMargin" id="KYB-M1-1sc"/>
+                                        <constraint firstItem="IxX-hA-Rc8" firstAttribute="leading" secondItem="RMl-Ry-C7b" secondAttribute="trailing" constant="8" symbolic="YES" id="P9M-NY-tvm"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="IxX-hA-Rc8" secondAttribute="bottom" constant="13" id="SEZ-ly-LiB"/>
+                                        <constraint firstItem="IxX-hA-Rc8" firstAttribute="top" secondItem="45F-ez-hBh" secondAttribute="topMargin" constant="12" id="WAe-MF-pbZ"/>
+                                        <constraint firstItem="RMl-Ry-C7b" firstAttribute="top" secondItem="45F-ez-hBh" secondAttribute="top" constant="11" id="YjR-9H-mXf"/>
+                                        <constraint firstItem="RMl-Ry-C7b" firstAttribute="leading" secondItem="45F-ez-hBh" secondAttribute="leading" constant="20" symbolic="YES" id="jrs-GT-gcl"/>
+                                        <constraint firstItem="h6x-h2-NX2" firstAttribute="centerY" secondItem="45F-ez-hBh" secondAttribute="centerY" id="nKh-Jd-x30"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <outlet property="imgproduct" destination="1Mq-zt-g9o" id="fP3-D5-S9v"/>
-                                    <outlet property="productName" destination="skr-6w-mNv" id="TVg-iD-ak0"/>
-                                    <outlet property="productprice" destination="GLD-cm-VhE" id="QY5-eK-BGW"/>
+                                    <outlet property="imgproduct" destination="RMl-Ry-C7b" id="BX9-JD-zcI"/>
+                                    <outlet property="productName" destination="KIO-xD-RSo" id="6UW-Vi-diC"/>
+                                    <outlet property="productprice" destination="bju-Zy-Vc8" id="Yu9-XW-dsn"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -363,7 +370,35 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="caB-Gl-v9f" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1013.0434782608696" y="2151.5625"/>
+            <point key="canvasLocation" x="-800.00000000000011" y="2124.7767857142858"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="ycS-5h-0XY">
+            <objects>
+                <tableViewController id="9mc-jC-g7R" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="Zk4-6M-jiX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="jqq-XJ-Usp">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="jqq-XJ-Usp" id="HEg-sc-2ue">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="9mc-jC-g7R" id="W3i-xt-XcT"/>
+                            <outlet property="delegate" destination="9mc-jC-g7R" id="5jd-xi-pqQ"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Rj3-oh-eFh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="5113" y="3209"/>
         </scene>
         <!--the account-->
         <scene sceneID="IUL-9G-AWp">
@@ -382,7 +417,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tnb-PL-SPt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2410" y="2802"/>
+            <point key="canvasLocation" x="7523" y="2659"/>
         </scene>
         <!--catgory-->
         <scene sceneID="kxB-fn-jbT">
@@ -405,8 +440,8 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="Zjg-0e-Iwh"/>
-        <segue reference="bUr-Wj-qfW"/>
+        <segue reference="Sxh-Es-mPo"/>
+        <segue reference="xj4-lv-tDs"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="cart" catalog="system" width="128" height="102"/>
